--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <header class="header">
         <div class="header-content">
             <div class="logo">
-                <img src="DEXLESS logo Black_White bg.png" alt="DEXLESS" class="logo-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                <img src="DEXLESS logo Black_White bg.png" alt="DEXLESS" class="logo-img logo-light" onerror="this.style.display='none';">
+                <img src="DEXLESS logo white.png" alt="DEXLESS" class="logo-img logo-dark" onerror="this.style.display='none';">
                 <div class="logo-fallback" style="display: none;">
                     <span class="logo-text">DEXLESS</span>
                 </div>
@@ -29,8 +30,14 @@
                     <button class="lang-btn active" data-lang="en">English</button>
                     <button class="lang-btn" data-lang="zh-CN">简体中文</button>
                 </div>
-                <a href="https://api.orderly.org" target="_blank" class="header-link">Mainnet</a>
-                <a href="https://testnet-api.orderly.org" target="_blank" class="header-link">Testnet</a>
+                <button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">
+                    <svg class="sun-icon" width="20" height="20" viewBox="0 0 20 20" fill="currentColor">
+                        <path d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"/>
+                    </svg>
+                    <svg class="moon-icon" width="20" height="20" viewBox="0 0 20 20" fill="currentColor">
+                        <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"/>
+                    </svg>
+                </button>
             </div>
         </div>
     </header>
